# larper

./: .gitignore  README.md  config.py  main.py  pyproject.toml  vector_db
TUI/: app.py  main.py
TUI/state/: store.py
TUI/styles/: app.css
TUI/widgets/: agent_panel.py  chat_input.py  events.py
data/: larper.db
src/TUI/: app.py  layout.py
src/TUI/state/: store.py
src/TUI/styles/: app.css
src/TUI/widgets/: agent_panel.py  input_dialog.py  notes.py  status_bar.py  tabs.py  todos.py  vim.py
src/core/: events.py  queue.py  watchdog.py
src/ingestion/: parser.py  processor.py  sync.py  sync_worker.py  worker.py
src/ingestion/db/: __init__.py  blocks.py  connection.py  notes.py  schema.py  sync_log.py  tags.py  tasks.py
src/ingestion/parser/: __init__.py  core.py  extractors.py  patterns.py  worker.py
src/rag/: __init__.py  model_loader.py  vector_db.py
test_data/: test_larper.db-shm  test_larper.db-wal
tests/: test_app.py  test_parser.py  test_rag.py  test_retrieval.py
